# elevator-system

./: .gitignore  CMakeLists.txt  README.md
app/: elevator_system.cpp
include/: command.h  elevator.h  floor.h  message.h  system.h  user_message.h
src/: command.cpp  elevator.cpp  floor.cpp  main.cpp  message.cpp  system.cpp  user_message.cpp
test/: CMakeLists.txt  README.md  test_message.cpp
